# SOS

./: README.md  pyproject.toml
examples/: affair.json  agent_harish.json  code_of_conduct_personal_operating_code.json  craft_personal_operations.json  decision_log_ai_business_hedge.json  domains_core.json  interest.json  mission.json  operation_ai_business_v1.json  protocol.json  regimen.json  regimen_creator.json  regimen_health.json  review_ai_business_hedge_aar.json  routine.json  routine_creator_daily.json  routine_health_daily.json  sources_core.json  war_game_mission_build_ai_business.json
genesis/: GENESIS.md
output/: interactive_war_room.html  ontology_graph.mmd  taxonomy.md  war_room.html
schema/: affair.schema.json  agent.schema.json  artifact.schema.json  code_of_conduct.schema.json  craft.schema.json  domain.schema.json  interest.schema.json  lineage.schema.json  mission.schema.json  operation.schema.json  protocol.schema.json  regimen.schema.json  resource.schema.json  review.schema.json  routine.schema.json  rules_of_engagement.schema.json  signal.schema.json  source_of_volatility.schema.json
src/: __init__.py  decision_log.py  gates.py  index.py  models.py  operation.py  review.py  validate.py  view_graph.py  view_interactive_war_room.py  view_taxonomy.py  view_war_room.py  war_game.py
